updated controllers to classes and implemented new tsoa logic following same code basis.
